--- a/exam-angular/src/app/product/details/details.component.css
+++ b/exam-angular/src/app/product/details/details.component.css
@@ -1,6 +1,3 @@
-@import url('./details.component.css2.css');
-@import url('./details.component.css3.css');
-
 .card {
     border: 1px solid black;
     border-radius: 0.4rem;
@@ -18,15 +15,85 @@
     height: 110px;
 }
 
-.edit-functionalities {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 #edit-content-wrapper {
     margin: 0.5em 1em 0.5em 1em;
     resize: none;
     border-radius: 0.3em;
+}
+
+aside {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+aside span {
+    font-size: 1.1em;
+    color: #d0cfcf;
+}
+
+.card img {
+    border-top-left-radius: 0.4rem;
+    border-top-right-radius: 0.4rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card ul {
+    width: 80%;
+    list-style: none;
+    padding: 0;
+    margin: 0.5em 1em 0.5em 1em;
+}
+
+.card ul li {
+    font-size: 1.1em;
+    text-align: left;
+    color: #d0cfcf;
+}
+
+.fieldset-container {
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin-bottom: 0.5em;
+}
+
+.fieldset-container fieldset {
+    width: 100%;
+    border: 1px solid #CCFF00;
+    border-radius: 0.3em;
+}
+
+.fieldset-container fieldset legend {
+    margin: 0 auto;
+    color: #d0cfcf;
+    font-size: 1em;
+}
+
+.card::-webkit-scrollbar {
+    width: 8px;
+}
+
+.card::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 4px;
+}
+
+.card::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+}
+
+.card::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.card::-webkit-scrollbar-thumb:active {
+    background: #333;
 }
 
